<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inicio"
        android:icon="@drawable/home"
        android:title="@string/title_inicio" />

    <item
        android:id="@+id/navigation_contactos"
        android:icon="@drawable/contact"
        android:title="@string/title_contactos" />

    <item
        android:id="@+id/navigation_mapa"
        android:icon="@drawable/map"
        android:title="@string/title_mapa" />

    <item
        android:id="@+id/navigation_informacoes"
        android:icon="@drawable/information_button"
        android:title="@string/title_informacoes" />

    <item
        android:id="@+id/navigation_definicoes"
        android:icon="@drawable/setting"
        android:title="@string/title_definicoes" />

</menu>